welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not found: value c
      faireMotif(c)
                 ^MethodsPicture:16: error: not found: value getColorBrosse
  if (getColorBrosse() != c)
      ^MethodsPicture:18: error: not found: value setColorBrosse
    setColorBrosse(c)
    ^MethodsPicture:43: error: value Yellow is not a member of object java.awt.Color
  faireV(Color.Yellow)
               ^MethodsPicture:44: error: value Red is not a member of object java.awt.Color
  faireV(Color.Red)
               ^MethodsPicture:45: error: value Blue is not a member of object java.awt.Color
  faireV(Color.Blue)
               ^MethodsPicture:46: error: value Green is not a member of object java.awt.Color
  faireV(Color.Green)
               ^